# saleor-test-app

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
app/: settings.py  urls.py
app_auth/: apps.py  models.py  urls.py  views.py
app_auth/migrations/: 0001_initial.py
app_core/: views.py
app_core/services/: sqs.py
app_webhook/: urls.py  views.py
docs/: register.txt
scripts/: entrypoint.sh  export_requirements.sh
