[tool.poetry]
name = "saleor-test-app"
version = "0.1.0"
description = ""
authors = ["Sheikh Haris Zahid <sheikh.haris.zahid@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1"
boto3 = "^1.24.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
